--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/png" href="/Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1d4ed8" />
     <meta name="description" content="AI-powered blogging platform - Write, share, and discover content" />
@@ -23,7 +23,7 @@
 
     <!-- PWA support -->
     <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/icon-192x192.png" />
+    <link rel="apple-touch-icon" href="/Icon.png" />
     
     <!-- Preconnect to API domain -->
     <link rel="preconnect" href="https://api.aiblog.app" />
